[package]
name = "engram-compliance-oracle"
version = "0.5.0"
edition = "2021"
description = "On-chain sanctions compliance oracle for Stellar/Soroban — powered by Engram"
license = "MIT"
repository = "https://github.com/Engram-Training/engram-compliance-oracle"

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
